# podcast-rss-generator

./: .gitignore  INSTALLATION.md  MANIFEST.in  PACKAGE_DESCRIPTION.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md  feed.py  podcast.xml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
podcast_rss_generator/: __init__.py  cli.py  generator.py
tests/: __init__.py  conftest.py
